# verse-of-the-day-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: post_image.yml
source/: image_extraction.py  post_image.py
